--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Green house</title>
 </head>
 <body>
      <div class="wrapper">
-    111
     <header class="header">
-        
-1
+        <div class="header_bg">
+            <div class="header_phone">
+            </div>
+            <img class="header_bg-img-left" src="img/top_bg.jpg">
+            <img src="img/header_bg.jpg">
+            <img class="header_bg-img-right" src="img/top_bg.jpg">
+        </div>
+        <div class="header_phone">
+            
+        </div>
+        <nav class="header_navigation"></nav>
+        <div class="header_banner"></div>
     </header>
 
     <main class="main">
-2
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor rem saepe, obcaecati quisquam quasi sunt asperiores sapiente temporibus hic? Facere ab assumenda, inventore itaque perferendis enim corrupti quos iusto illum?
     </main>
 
     <footer class="footer">
