--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
     <header class="header">
         <div class="header_bg">
             <div class="header_phone">
+                <p class="header_phone-text">Call us now: 800 567 8888</p>
             </div>
-            <img class="header_bg-img-left" src="img/top_bg.jpg">
-            <img src="img/header_bg.jpg">
-            <img class="header_bg-img-right" src="img/top_bg.jpg">
+            <div class="header_navigation">
+                <img src="img/logo.jpg"> 
+                <nav class="header_navigation-top">
+                    <ul class="header_navigation-top-list">
+                        <li class="header_navigation-top-list-item">Home</li>
+                        <li class="header_navigation-top-list-item">About Us</li>
+                        <li class="header_navigation-top-list-item">Services</li>
+                        <li class="header_navigation-top-list-item">Solutions</li>
+                        <li class="header_navigation-top-list-item">Support</li>
+                        <li class="header_navigation-top-list-item">Contact Us</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header_banner"></div>
         </div>
-        <div class="header_phone">
-            
-        </div>
-        <nav class="header_navigation"></nav>
-        <div class="header_banner"></div>
+        
     </header>
 
     <main class="main">
