--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
     <title>Green house</title>
 </head>
 <body>
+    <img class="wrapper_long" src="img/top_bg.jpg">
     <div class="wrapper">
+        <img class="wrapper_bg" src="img/header_bg.jpg">
         <header class="header">
-
+            <div class="header_top"></div>
+            <nav class="header_navigation">
+                <img class="header_navigation-img" src="img/logo.jpg">
+                <ul class="header_navigation-item">
+                    <li class="navigation-item">Home</li>
+                    <li class="navigation-item">Abouts Us</li>
+                    <li class="navigation-item">Services</li>
+                    <li class="navigation-item">Solutions</li>
+                    <li class="navigation-item">Support</li>
+                    <li class="navigation-item">Contact Us</li>
+                </ul>
+            </nav>
         </header>
         
         <div class="banner">
-
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quos dicta nulla voluptate, officia libero corporis qui atque explicabo tempora tenetur, molestias illum quibusdam! Mollitia totam obcaecati veniam ea libero.
+            Consequuntur ipsa modi possimus quam autem ullam obcaecati! Facere numquam minima tempore necessitatibus, distinctio est esse voluptas laudantium enim temporibus dicta exercitationem soluta accusamus ab culpa, harum recusandae similique itaque!
         </div>
     </div>
     
