--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
                     <P>FOR YOU</P>
                 </div>
                 <div class="banner_text">
-                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus inventore nostrum placeat eligendi explicabo magnam veritatis odio dolores ratione voluptas aspernatur. Voluptas architecto eum dolores harum nostrum qui cupiditate!</P>
+                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                         Reiciendis, ducimus inventore nostrum placeat eligendi 
+                         explicabo magnam veritatis odio dolores ratione voluptas 
+                         aspernatur. Voluptas architecto eum dolores harum nostrum 
+                         qui cupiditate!</P>
                 </div>
                 <button class="banner_button">
                     Click Here
                 </button>
             </div>
-            
+        </div>
+        <div class="maincontents">
+            <img class="maincontents-img" src="img/growth_bg.jpg">
+            ffff
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam provident minus facere fugit consequatur facilis, fugiat ex pariatur esse nostrum id quod labore quasi, dolor minima quas et architecto voluptatem!
         </div>
     </div>
     
