--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                             Lorem, ipsum dolor sit amet consecteturadipisicing elit. Donec molestie.
                         </p>
                         <p class="maincontents_content-heading-text-description"> 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Voluptatum fugit rem omnis quaerat numquam repellendus hic odio dolor 
-                            nulla nemo sint in voluptate repellat animi, soluta laborum tempora!
-                             Sint, veniam? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                              Assumenda dolorem quaerat obcaecati praesentium consequatur tenetur consectetur,
-                               modi alias? Illo, facilis sunt? Sit vero sed minus, voluptatibus soluta illo natus ipsum?
+                            Phasellus sollicitudin. Vestibulum condimentum facilisis nulla. In hac habitasse platea dictumst.
+                                Nulla nonummy. Cras quis libero. Cras venenatis. Aliquam posuere lobortis pede. 
+                                Nullam fringilla urna id leo. Praesent aliquet pretium erat. Praesent non odio. 
+                                Pellentesque a magna a mauris vulputate lacinia. Aenean viverra. 
+                                Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
+                                per inceptos hymenaeos. Aliquam lacus.
                         </p>
                         <div class="maincontents_content-heading-text-more">
                             <div class="maincontents_content-heading-text-more-img">
@@ -90,6 +90,18 @@
                         </div>
                     </div>
                     <div class="maincontents_content-subtitle">
+                        <div class="maincontents_content-subtitle-work">
+                            <h2 class="content-subtitle-work-h2">
+                                WORK SMARTER WITH OUR BUSINESS COMPANY
+                            </h2>
+                        </div>
+                        <div class="maincontents_content-subtitle-work-text">
+                            <p class="maincontents_content-subtitle-work-text-description">
+                                Phasellus sollicitudin. Vestibulum condimentum facilisis nulla. In hac habitasse platea dictumst.
+                                Nulla nonummy. Cras quis libero. Cras venenatis. Aliquam posuere lobortis pede. 
+                                Nullam fringilla urna id leo. Praesent aliquet pretium erat.
+                            </p>
+                        </div>
                         <div class="maincontents_content-subtitle-work">
                             <div class="clock"></div>
                             <div class="person"></div>
