--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
                     <P>FOR YOU</P>
                 </div>
                 <div class="banner_text">
-                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                         Reiciendis, ducimus inventore nostrum placeat eligendi 
-                         explicabo magnam veritatis odio dolores ratione voluptas 
-                         aspernatur. Voluptas architecto eum dolores harum nostrum 
-                         qui cupiditate!</P>
+                    <P>Lorem, ipsum dolor sit amet consecteturadipisicing elit. Donec molestie. Sed aliquamsem ut arru.Phasellus sollicitudin. Vestibulum condimentum facilisis nulla. In hac habitasse platea dictumst.
+                        Nulla nonummy. Cras quis libero. Cras venenatis. Aliquam posuere lobortis pede. 
+                        Nullam fringilla urna id leo.</P>
                 </div>
                 <button class="banner_button">
                     Click Here
@@ -72,7 +70,7 @@
                     </div>
                     <div class="maincontents_content-heading-text">
                         <p class="maincontents_content-heading-text-heading">
-                            Lorem, ipsum dolor sit amet consecteturadipisicing elit. Donec molestie.
+                            Lorem ipsum dolor sit amet consecteturadipisicing elit. Donec molestie.
                         </p>
                         <p class="maincontents_content-heading-text-description"> 
                             Phasellus sollicitudin. Vestibulum condimentum facilisis nulla. In hac habitasse platea dictumst.
