--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
         <footer class="footer">
             <img class="footer_bg" src="img/footer_bg.jpg">
             <nav class="footer_navigation">
-                <ul class="footer_navigation-item">
-                    <li class="navigation-item"><a class="item" href="#">Home</a> </li>
-                    <li class="navigation-item"><a class="item" href="#">Abouts Us</a></li>
-                    <li class="navigation-item"><a class="item" href="#">Services</a></li>
-                    <li class="navigation-item"><a class="item" href="#">Solutions</a></li>
-                    <li class="navigation-item"><a class="item" href="#">Support</a></li>
-                    <li class="navigation-item"><a class="item" href="#">Contact Us</a></li>
+                <ul class="footer_navigation-item-footer">
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Home</a> </li>
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Abouts Us</a></li>
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Services</a></li>
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Solutions</a></li>
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Support</a></li>
+                    <li class="navigation-item-footer"><a class="item-footer" href="#">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="footer_navigation-copyright">
